Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1159

[C++] Static data members cannot be accessed from inline functions in Arrow headers by thirdparty users

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.5.0
    • C++
    • None

    Description

      This problem was exposed by the code migration in ARROW-1154. This yields DLL linking errors like

      column_writer.cc.obj : error LNK2001: unresolved external symbol "private: static __int64 arrow::CpuInfo::hardware_flags_" (?hardware_flags_@CpuInfo@arrow@@0_JA)
      statistics.cc.obj : error LNK2001: unresolved external symbol "private: static __int64 arrow::CpuInfo::hardware_flags_" (?hardware_flags_@CpuInfo@arrow@@0_JA)
      

      Attachments

        Activity

          People

            wesm Wes McKinney
            wesm Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: