ARROW-1159: [C++] Use dllimport for visibility when not building Arrow library

This should fix the linking issues currently in https://ci.appveyor.com/project/ApacheSoftwareFoundation/parquet-cpp/build/1.0.173/job/90ahlb7eoxlch3yj

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #789 from wesm/ARROW-1154-post and squashes the following commits:

985cedee [Wes McKinney] Use dllimport for visibility when not building Arrow library, this enables static members to be visible from inline functions like in cpu-info.h